// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches starred task with conversation closed snapshot in Teams 1`] = `
<div
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <li
    className="Task-listitem"
  >
    <div
      className="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        className="input-79"
        id="checkbox-3"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-80"
        htmlFor="checkbox-3"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      className="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      className="ms-Link Task-star-link root-86"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden={true}
        className="Task-starred-icon root-87"
        data-icon-name="FavoriteStarFill"
        onClick={[Function]}
        role="presentation"
      >
        
      </i>
    </button>
    <button
      className="ms-Link Task-conversation-link root-86"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden={true}
        className="Task-conversation-closed-icon root-89"
        data-icon-name="Chat"
        onClick={[Function]}
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`matches unstarred task snapshot with conversation open in Teams 1`] = `
<div
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <li
    className="Task-listitem"
  >
    <div
      className="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        className="input-79"
        id="checkbox-4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-80"
        htmlFor="checkbox-4"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      className="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      className="ms-Link Task-star-link root-86"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden={true}
        className="Task-starred-icon root-87"
        data-icon-name="FavoriteStarFill"
        onClick={[Function]}
        role="presentation"
      >
        
      </i>
    </button>
    <button
      className="ms-Link Task-conversation-link root-86"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden={true}
        className="Task-conversation-open-icon root-91"
        data-icon-name="ChatSolid"
        onClick={[Function]}
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`renders starred task snapshot 1`] = `
<div
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <li
    className="Task-listitem"
  >
    <div
      className="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        className="input-79"
        id="checkbox-1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-80"
        htmlFor="checkbox-1"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      className="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      className="ms-Link Task-star-link root-86"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden={true}
        className="Task-starred-icon root-87"
        data-icon-name="FavoriteStarFill"
        onClick={[Function]}
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`renders unstarred task snapshot 1`] = `
<div
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <li
    className="Task-listitem"
  >
    <div
      className="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        className="input-79"
        id="checkbox-2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-80"
        htmlFor="checkbox-2"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      className="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      className="ms-Link Task-star-link root-86"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden={true}
        className="Task-unstarred-icon root-87"
        data-icon-name="FavoriteStar"
        onClick={[Function]}
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;
